update content page, update link, update UI 404PAge

--- a/client/ui/layouts/partials/Footer.html
+++ b/client/ui/layouts/partials/Footer.html
@@ -6,11 +6,11 @@
                     <div class="col-md-3 col-sm-6">
                         <h4>Pages</h4>
                         <ul>
-                            <li><a href="text.html">About us</a>
+                            <li><a href="/">About us</a>
                             </li>
-                            <li><a href="text.html">Terms and conditions</a>
+                            <li><a href="/">Terms and conditions</a>
                             </li>
-                            <li><a href="faq.html">FAQ</a>
+                            <li><a href="/">FAQ</a>
                             </li>
                             <li><a href={{pathFor 'Contact'}}>Contact us</a>
                             </li>
@@ -43,7 +43,9 @@
                             </li>
                             <li><a href={{pathFor 'Category'}}><h5>Notebooks</h5></a>
                             </li>
-                            <li><a href={{pathFor 'Category'}}><h5>Something More</h5></a>
+                            <li><a href={{pathFor 'Category'}}><h5>Stationery</h5></a>
+                            </li>
+                            <li><a href={{pathFor 'Category'}}><h5>Sticker</h5></a>
                             </li>
                         </ul>
 
