--- a/client/ui/layouts/partials/SideBar.html
+++ b/client/ui/layouts/partials/SideBar.html
@@ -1,4 +1,4 @@
-<Template name="SideBar">
+<template name="SideBar">
     <div class="col-md-3">
         <div class="panel panel-default sidebar-menu">
             <div class="panel-heading">
@@ -8,41 +8,53 @@
             <div class="panel-body">
                 <ul class="nav nav-pills nav-stacked category-menu">
                     <li>
-                        <a href="#">Men <span class="badge pull-right">42</span></a>
+                        <a href="#">Decoration <span class="badge pull-right">42</span></a>
                         <ul>
-                            <li><a href="#">T-shirts</a>
+                            <li><a href="#">Khung lưới</a>
                             </li>
-                            <li><a href="#">Shirts</a>
+                            <li><a href="#">Kệ gỗ</a>
                             </li>
-                            <li><a href="#">Pants</a>
+                            <li><a href="#">Bảng treo</a>
                             </li>
-                            <li><a href="#">Accessories</a>
+                            <li><a href="#">Decoration flags</a>
+                            </li>
+                            <li><a href="#">Kẹp gỗ</a>
                             </li>
                         </ul>
                     </li>
                     <li class="active">
-                        <a href="#">Ladies  <span class="badge pull-right">123</span></a>
+                        <a href="#">Light  <span class="badge pull-right">123</span></a>
                         <ul>
-                            <li><a href="#">T-shirts</a>
+                            <li><a href="#">Đèn ngủ</a>
                             </li>
-                            <li><a href="#">Skirts</a>
-                            </li>
-                            <li><a href="#">Pants</a>
-                            </li>
-                            <li><a href="#">Accessories</a>
+                            <li><a href="#">Đèn để bàn</a>
                             </li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#">Kids  <span class="badge pull-right">11</span></a>
+                        <a href="#">Notebooks  <span class="badge pull-right">11</span></a>
                         <ul>
-                            <li><a href="#">T-shirts</a>
+                            <li><a href="#">Sổ kế hoạch</a>
                             </li>
-                            <li><a href="#">Skirts</a>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">Stationery  <span class="badge pull-right">11</span></a>
+                        <ul>
+                            <li><a href="#">Hộp bút</a>
                             </li>
-                            <li><a href="#">Pants</a>
+                            <li><a href="#">Khung hình</a>
                             </li>
-                            <li><a href="#">Accessories</a>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">Sticker  <span class="badge pull-right">11</span></a>
+                        <ul>
+                            <li><a href="#">Hello Kitty</a>
+                            </li>
+                            <li><a href="#">Rainbow</a>
+                            </li>
+                            <li><a href="#">Siêu nhân Gao</a>
                             </li>
                         </ul>
                     </li>
@@ -141,4 +153,4 @@
             </a>
         </div>
     </div>
-</Template>
+</template>
