--- a/client/ui/layouts/Home/HomePage.html
+++ b/client/ui/layouts/Home/HomePage.html
@@ -102,7 +102,7 @@
         <div class="col-md-3 col-sm-3">
             <h3>{{line.Name}}</h3>
             <button class="btn btn-info">
-                <a href="{{line.Link}}">View all product</a>
+                <a href="{{pathFor line.Link}}">View all product</a>
             </button>
         </div>
         <div class="col-md-9 col-sm-9">
@@ -122,7 +122,9 @@
 <template name="_Product">
     <div class="container">
         <div class="row">
-            <img src="{{product.image}}" width="200px" height="200px" />
+            <a href ={{pathFor product.link}}>
+                <img src="{{product.image}}" width="200px" height="200px" />
+            </a>
         </div>
         <div class="row" style="padding: 10px 0 10px 50px;" >
             <button  class="btn btn-sm btn-info"><li class="fa fa-cart-plus"></li> Add to cart</button>
