--- a/client/ui/layouts/detail/Detail.html
+++ b/client/ui/layouts/detail/Detail.html
@@ -21,7 +21,28 @@
                     <div class="row" id="productMain">
                         <div class="col-sm-6">
                             <div id="mainImage">
-                                <img src="images/Lights/bling_bling.jpg" alt="" class="img-responsive">
+                                <img id="main-pic" src="images/Lights/bling_bling.jpg" alt="" class="img-responsive" data-toggle="modal" data-target="#myModal">
+
+                                <!-- Modal -->
+                                <div id="myModal" class="modal fade" role="dialog">
+                                    <div class="modal-dialog">
+
+                                        <!-- Modal content-->
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                                <h4 class="modal-title">Modal Header</h4>
+                                            </div>
+                                            <div class="modal-body">
+                                                <p>Đặt slider trong đây</p>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
                             </div>
 
                             <div class="ribbon sale">
